Fix snackbar being covered up by modal.

--- a/css/snackbar.css
+++ b/css/snackbar.css
@@ -9,7 +9,7 @@
     border-radius: 2px;
     padding: 16px;
     position: fixed;
-    z-index: 1;
+    z-index: 9999;
     left: 50%;
     bottom: 30px;
 }
